[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codetoprompt-mcp"
version = "0.1.0"
description = "An MCP server for the codetoprompt library, enabling integration with LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yash Bhaskar", email = "yash9439@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]
dependencies = [
    "codetoprompt==0.6.2",
    "mcp>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/yash9439/codetoprompt-mcp"  
Repository = "https://github.com/yash9439/codetoprompt-mcp"
Issues = "https://github.com/yash9439/codetoprompt-mcp/issues" 

[project.scripts]
ctp-mcp = "codetoprompt_mcp.mcp:run_server"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 88
